--- a/app/globals.css
+++ b/app/globals.css
@@ -4,35 +4,9 @@
 
 html {
   scroll-behavior: smooth;
-}
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  color:antiquewhite
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-  ::selection {
-    color:rgb(26, 25, 25);
-    background: #8b10de; /* WebKit/Blink Browsers */
-  }
-
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
 @layer components {
   .section-wrapper {
